--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,4 +1,4 @@
-$phone-heght: 99vh;
+$phone-height: 99vh;
 
 .styleHome {
   padding: 7vh 1em 1em 1em;
@@ -23,8 +23,8 @@ $phone-heght: 99vh;
 }
 
 .default_layout {
-  width: ($phone-heght/19.5) * 8.9;
-  height: $phone-heght * 0.927;
+  width: ($phone-height/19.5) * 8.9;
+  height: $phone-height * 0.927;
   background-color: #f0f2f5;
 }
 
