--- a/src/components/IphoneProduct/style.scss
+++ b/src/components/IphoneProduct/style.scss
@@ -35,7 +35,7 @@ $height: 20vh;
   border-radius: 20px;
 }
 
-.box-color{
+.box-color {
   margin-top: 0.5rem;
 }
 
@@ -55,7 +55,8 @@ $height: 20vh;
 .page-overview .section-colors .row-colors .colornav-link {
   margin-bottom: 20px;
 }
-.colornav-link.current, .colornav-value:checked ~ .colornav-link {
+.colornav-link.current,
+.colornav-value:checked ~ .colornav-link {
   border-color: #0070c9;
   cursor: default;
 }
@@ -78,8 +79,8 @@ $height: 20vh;
 .colornav-swatch {
   background: #ccc center center;
   border-radius: 50%;
-  -webkit-box-shadow: inset 0 0 1px 0 rgba(102,102,102,0.5);
-  box-shadow: inset 0 0 1px 0 rgba(102,102,102,0.5);
+  -webkit-box-shadow: inset 0 0 1px 0 rgba(102, 102, 102, 0.5);
+  box-shadow: inset 0 0 1px 0 rgba(102, 102, 102, 0.5);
   display: block;
   width: 32px;
   height: 32px;
@@ -87,8 +88,8 @@ $height: 20vh;
 
 .colornav-swatch:after {
   border-radius: inherit;
-  -webkit-box-shadow: inset 0 2px 1.5px rgba(0,0,0,0.1);
-  box-shadow: inset 0 2px 1.5px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 2px 1.5px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 2px 1.5px rgba(0, 0, 0, 0.1);
   content: '';
   display: block;
   height: inherit;
@@ -96,12 +97,13 @@ $height: 20vh;
   width: inherit;
 }
 
-.colornav-link .colornav-label, .colornav-value:checked ~ .colornav-link .colornav-label {
+.colornav-link .colornav-label,
+.colornav-value:checked ~ .colornav-link .colornav-label {
   font-size: 11px;
   line-height: 1;
   font-weight: 400;
-  letter-spacing: -.008em;
-  font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+  letter-spacing: -0.008em;
+  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   clip: auto;
   -webkit-clip-path: none;
   clip-path: none;
@@ -125,6 +127,10 @@ button:focus {
   outline: none !important;
 }
 
-.ant-select-selector{
+.ant-select-selector {
   border-radius: 10px;
+}
+
+.quantity {
+  font-size: 0.6em;
 }
