--- a/src/pages/BuyPhone/style.scss
+++ b/src/pages/BuyPhone/style.scss
@@ -41,3 +41,20 @@
   padding-top: 4vh;
   overflow: overlay;
 }
+
+.boxStake {
+  .token-transfer {
+    height: 30px;
+    width: 30;
+  }
+}
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  margin-right: 5px;
+}
