--- a/src/components/ButtonBack/style.scss
+++ b/src/components/ButtonBack/style.scss
@@ -1,6 +1,5 @@
 .box-btn-back {
   height: 4vh;
-  width: 100%;
   z-index: 1000;
   background-color: #f0f2f5;
   position: fixed;
@@ -22,4 +21,8 @@
       font-weight: bold;
     }
   }
+}
+
+.width-100 {
+  width: 100%;
 }
