--- a/src/Layouts/PhoneLayout/style.scss
+++ b/src/Layouts/PhoneLayout/style.scss
@@ -65,7 +65,7 @@ button:active {
   height: $phone-height;
 }
 
-.phone_header {
+.phone_notch {
   position: absolute;
   width: ($phone-height/19.5) * 10.3;
   height: $phone-height;
