--- a/src/Layouts/PhoneLayout/styleLayoutPhone.scss
+++ b/src/Layouts/PhoneLayout/styleLayoutPhone.scss
@@ -55,8 +55,6 @@ $phone-height: 100vh;
 
 .iphone5s {
   .content_box {
-    .default_layout {
-    }
     .style_iframe {
       width: ($phone-height/19.5) * 8.6;
       height: $phone-height * 0.636;
@@ -74,7 +72,6 @@ $phone-height: 100vh;
     .default_layout {
       width: ($phone-height/19.5) * 8.8;
       height: $phone-height * 0.75;
-      // border-radius: $phone-height/18.8;
     }
     .style_iframe {
       width: ($phone-height/19.5) * 8.8;
@@ -90,12 +87,13 @@ $phone-height: 100vh;
 .iphoneX {
   .content_box {
     .default_layout {
+      width: ($phone-height/19.5) * 8.78;
+      height: $phone-height * 0.85;
+      border-radius: $phone-height * 0.1;
     }
     .style_iframe {
-      width: ($phone-height/19.5) * 8.6;
-      height: $phone-height * 0.636;
-      top: 18.4vh;
-      left: 2.8vw;
+      width: ($phone-height/19.5) * 8.78;
+      height: $phone-height * 0.85;
     }
     .lock {
       height: 80%;
@@ -111,12 +109,11 @@ $phone-height: 100vh;
   .content_box {
     .default_layout {
       width: ($phone-height/19.5) * 8.4;
-      height: $phone-height * 0.924;
-      border-radius: 5vh;
+      height: $phone-height * 0.85;
     }
     .style_iframe {
-      width: ($phone-height/19.5) * 8.62;
-      height: $phone-height * 0.924;
+      width: ($phone-height/19.5) * 8.5;
+      height: $phone-height * 0.85;
       border-radius: $phone-height/25;
     }
     .lock {
@@ -129,16 +126,13 @@ $phone-height: 100vh;
   .content_box {
     .default_layout {
       height: $phone-height * 0.858;
-      border-radius: $phone-height * 0.1;
       width: ($phone-height/19.5) * 8.67;
+      border-radius: $phone-height * 0.1;
     }
     .style_iframe {
       width: ($phone-height/19.5) * 8.67;
       height: $phone-height * 0.884;
-      border-top-left-radius: 0.5em;
-      border-top-right-radius: 0.5em;
-      border-bottom-right-radius: 2.2em;
-      border-bottom-left-radius: 2.2em;
+      border-radius: 0.5em 0.5em 2.2em 2.2em;
       top: 6.7vh;
     }
     .lock {
@@ -147,6 +141,22 @@ $phone-height: 100vh;
         height: $phone-height * 0.95;
         width: ($phone-height/19.5) * 9.6;
       }
+    }
+  }
+}
+
+.iphoneSE2 {
+  .content_box {
+    .default_layout {
+      width: ($phone-height/19.5) * 8.5;
+      height: $phone-height * 0.7;
+    }
+    .style_iframe {
+      width: ($phone-height/19.5) * 8.8;
+      height: $phone-height * 0.755;
+    }
+    .lock {
+      height: 66%;
     }
   }
 }
@@ -167,6 +177,28 @@ $phone-height: 100vh;
       border-bottom-left-radius: 2.2em;
       top: 6.7vh;
       left: 2.05vw;
+    }
+    .lock {
+      height: 80%;
+      .screen_size {
+        height: $phone-height * 0.95;
+        width: ($phone-height/19.5) * 9.6;
+      }
+    }
+  }
+}
+
+.iphone12Mini {
+  .content_box {
+    .default_layout {
+      width: ($phone-height/19.5) * 9;
+      height: $phone-height * 0.86;
+      border-radius: $phone-height/30;
+    }
+    .style_iframe {
+      width: ($phone-height/19.5) * 9;
+      height: $phone-height * 0.86;
+      border-radius: $phone-height/30;
     }
     .lock {
       height: 80%;
