--- a/src/pages/BuyPhone/style.scss
+++ b/src/pages/BuyPhone/style.scss
@@ -1,262 +1,266 @@
-
 .page-sale {
-    height: auto;
-    background-color: #f0f2f5;
-    margin-top: 10vh;
-    .offering-header {
-        background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 30%, #2cacd1 65%, #35eb93 100%);
-        box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
-        padding: 1rem 3rem ;
-        .offering-header-left {
-            .offering-logo {
-                text-align: start;
-                .offering-logo-img {
-                    width: 15vw;
-                }
-            }
+  height: auto;
+  background-color: #f0f2f5;
+  margin-top: 10vh;
+  .offering-header {
+    background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 30%, #2cacd1 65%, #35eb93 100%);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px,
+      rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    padding: 1rem 3rem;
+    .offering-header-left {
+      .offering-logo {
+        text-align: start;
+        .offering-logo-img {
+          width: 15vw;
         }
-        .offering-header-right{
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            .offering-connect-wallet{ 
-                .offering-connected {
-                    -webkit-box-align: center;
-                    align-items: center;
-                    color: #212529;
-                    img {
-                        margin-left: 10px;
-                        margin-right: 4px;
-                    }
-                    .offering-connected-name-wallet {
-                        box-sizing: border-box;
-                        margin: 0px;
-                        min-width: 0px;
-                        color: #212529;
-                        font-weight: bold;
-                    }
-                    .offering-connected-walletAddress {
-                        margin-top: 0.3rem;
-                        font-size: 0.85rem;
-                        font-weight: bold;
-                        color: #03008e;
-                    }
-                }
-                .offering-btn-connect-wallet {
-                    &:hover {
-                        color: darkblue;
-                    }
-                    border-radius: 20px;
-                    width: 10vw;
-                    height: 5vh;
-                    font-size: 1rem;
-                    font-weight: bold;
-                    color: #096dd9;
-                }
-            }
-        }
+      }
     }
-    .offering-content {
-        text-align: center;
-        .offering-total-supply-number {
-            font-size: 3rem;
+    .offering-header-right {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .offering-connect-wallet {
+        .offering-connected {
+          -webkit-box-align: center;
+          align-items: center;
+          color: #212529;
+          img {
+            margin-left: 10px;
+            margin-right: 4px;
+          }
+          .offering-connected-name-wallet {
+            box-sizing: border-box;
+            margin: 0px;
+            min-width: 0px;
+            color: #212529;
             font-weight: bold;
-            margin-top: 1rem;
-            background: linear-gradient(to right, #56b129 0%, #108cff 100%);
-            -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
+          }
+          .offering-connected-walletAddress {
+            margin-top: 0.3rem;
+            font-size: 0.85rem;
+            font-weight: bold;
+            color: #03008e;
+          }
         }
-
-        .offering-total-supply-text {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #1379e6ad;
+        .offering-btn-connect-wallet {
+          &:hover {
+            color: darkblue;
+          }
+          border-radius: 20px;
+          width: 10vw;
+          height: 5vh;
+          font-size: 1rem;
+          font-weight: bold;
+          color: #096dd9;
         }
-
-
-        .offering-total-supply-left {
-            .offering-total-supply-number { 
-                background: linear-gradient(to right, #56b129 0%, #108cff 100%);
-            -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
-            }
-        }
-        .offering-buy-token {
-            text-align: center;
-            margin: 1.5rem 0px 1.5rem;
-            padding: 0 0.25rem;
-            .offering-box-buy-token {
-                background: rgb(255, 255, 255);
-                border-radius: 40px;
-                max-width: 674px;
-                padding: 2.5vh 4.5vw 4.5vh 4.5vw;
-                margin: 0 auto;
-                box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-
-                .offering-text-exchange {
-                    color: rgb(79, 79, 79);
-                    font-weight: 700;
-                    margin: 20px 0px 20px;
-                    font-size: 1.5rem;
-                }
-
-                .offering-amount-to-phone {
-                    .offering-amount {
-                        display: flex;
-                        -webkit-box-align: center;
-                        align-items: center;
-                        border: 1px solid rgb(224, 224, 224);
-                        border-radius: 10px;
-                        color: rgb(189, 189, 189);
-                        padding: 8px 8px;
-                        height: 50px;
-                        .ant-input-number:focus, .ant-input-number-focused {
-                            outline-offset: 0px;
-                            -webkit-box-shadow: none !important;
-                            box-shadow: none  !important; 
-                        }
-                        .offering-amount-input {
-                            color: rgb(79, 79, 79);
-                            width: 0px;
-                            position: relative;
-                            outline: none;
-                            border: none;
-                            flex: 1 1 auto;
-                            background: none;
-                            font-size: 22px;
-                            font-weight: 700;
-                            white-space: nowrap;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            padding: 0px;
-                            appearance: textfield;
-                        }
-                        .offering-amount-btn-max {
-                            &[disabled] {
-                                color:#a3ced8;
-                            }
-                            background: none;
-                            border: none;
-                            cursor: pointer;
-                            outline: none;
-                            color:#007bff;
-                            font-weight: 700;
-                            font-size: 0.8rem;
-                            padding: 0px;
-                            user-select: none;
-                            margin-left: 5px;
-                        }
-                        .offering-amount-seperate  {
-                            border-left: 1px solid rgb(224, 224, 224);
-                            height: 24px;
-                            margin-left: 5px;
-                        }
-                        .offering-amount-select-token {
-                            width: 95px;
-                            .ant-select-selector {
-                                padding: 0;
-                                cursor: pointer;
-                                border: none;
-                                img {
-                                    padding-bottom: 3px;
-                                }
-                            }
-                        }
-                    }
-                    .offering-icon-arrow-down {
-                        margin: 0 0 1rem 0;
-                        font-size: 1.5rem;
-                        font-weight: bold;
-                    }
-                    .offering-balance-token {
-                        float: right;
-                        width: 50%;
-                        margin-top: 0.5rem;
-                        text-align: start;
-                        span {
-                            font-size: 0.9rem;
-                            margin: 0 0.5rem 0 2.5rem;
-                            font-style: italic;
-                        }
-                    }
-                    .offering-to-phone {
-                        display: flex;
-                        -webkit-box-align: center;
-                        align-items: center;
-                        border: 1px solid rgb(224, 224, 224);
-                        border-radius: 10px;
-                        color: rgb(189, 189, 189);
-                        padding: 12px 16px;
-                        height: 50px;
-                        .offering-phone {
-                            text-align: start;
-                            box-sizing: border-box;
-                            margin: 0px;
-                            min-width: 0px;
-                            flex: 1 1 0%;
-                            color: rgb(79, 79, 79);
-                            font-size: 22px;
-                            font-weight: 600;
-                            margin-right: 5px;
-                        }
-                        .offering-phone-text {
-                            font-weight: 700;
-                        }
-                    }
-
-                    .offering-slider {
-                        width: 100%;
-                        margin-top: 1rem;
-                        padding: 0.5rem;
-                    }
-
-
-                }
-
-                .offering-button-exchange {
-                    background-color: #0093E9;
-                    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-                    color: rgb(255, 253, 249);
-                    font-size: 1rem;
-                    width: 240px;
-                    height: 48px;
-                    margin: 1.5rem auto 0px;
-                }
-            }
-        }
+      }
     }
+  }
+  .offering-content {
+    text-align: center;
+    .offering-total-supply-number {
+      font-size: 3rem;
+      font-weight: bold;
+      margin-top: 1rem;
+      background: linear-gradient(to right, #56b129 0%, #108cff 100%);
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+    }
+
+    .offering-total-supply-text {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #1379e6ad;
+    }
+
+    .offering-total-supply-left {
+      .offering-total-supply-number {
+        background: linear-gradient(to right, #56b129 0%, #108cff 100%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+      }
+    }
+    .offering-buy-token {
+      text-align: center;
+      margin: 1.5rem 0px 1.5rem;
+      padding: 0 0.25rem;
+      .offering-box-buy-token {
+        background: rgb(255, 255, 255);
+        border-radius: 40px;
+        max-width: 674px;
+        padding: 2.5vh 4.5vw 4.5vh 4.5vw;
+        margin: 0 auto;
+        box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+
+        .offering-text-exchange {
+          color: rgb(79, 79, 79);
+          font-weight: 700;
+          margin: 20px 0px 20px;
+          font-size: 1.5rem;
+        }
+
+        .offering-amount-to-phone {
+          .offering-amount {
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            border: 1px solid rgb(224, 224, 224);
+            border-radius: 10px;
+            color: rgb(189, 189, 189);
+            padding: 8px 8px;
+            height: 50px;
+            .ant-input-number:focus,
+            .ant-input-number-focused {
+              outline-offset: 0px;
+              -webkit-box-shadow: none !important;
+              box-shadow: none !important;
+            }
+            .offering-amount-input {
+              color: rgb(79, 79, 79);
+              width: 0px;
+              position: relative;
+              outline: none;
+              border: none;
+              flex: 1 1 auto;
+              background: none;
+              font-size: 22px;
+              font-weight: 700;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              padding: 0px;
+              appearance: textfield;
+            }
+            .offering-amount-btn-max {
+              &[disabled] {
+                color: #a3ced8;
+              }
+              background: none;
+              border: none;
+              cursor: pointer;
+              outline: none;
+              color: #007bff;
+              font-weight: 700;
+              font-size: 0.8rem;
+              padding: 0px;
+              user-select: none;
+              margin-left: 5px;
+            }
+            .offering-amount-seperate {
+              border-left: 1px solid rgb(224, 224, 224);
+              height: 24px;
+              margin-left: 5px;
+            }
+            .offering-amount-select-token {
+              width: 95px;
+              .ant-select-selector {
+                padding: 0;
+                cursor: pointer;
+                border: none;
+                img {
+                  padding-bottom: 3px;
+                }
+              }
+            }
+          }
+          .offering-icon-arrow-down {
+            margin: 0 0 1rem 0;
+            font-size: 1.5rem;
+            font-weight: bold;
+          }
+          .offering-balance-token {
+            float: right;
+            width: 50%;
+            margin-top: 0.5rem;
+            text-align: start;
+            span {
+              font-size: 0.9rem;
+              margin: 0 0.5rem 0 2.5rem;
+              font-style: italic;
+            }
+          }
+          .offering-to-phone {
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            border: 1px solid rgb(224, 224, 224);
+            border-radius: 10px;
+            color: rgb(189, 189, 189);
+            padding: 12px 16px;
+            height: 50px;
+            .offering-phone {
+              text-align: start;
+              box-sizing: border-box;
+              margin: 0px;
+              min-width: 0px;
+              flex: 1 1 0%;
+              color: rgb(79, 79, 79);
+              font-size: 22px;
+              font-weight: 600;
+              margin-right: 5px;
+            }
+            .offering-phone-text {
+              font-weight: 700;
+            }
+          }
+
+          .offering-slider {
+            width: 100%;
+            margin-top: 1rem;
+            padding: 0.5rem;
+          }
+        }
+
+        .offering-button-exchange {
+          background-color: #0093e9;
+          background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+          color: rgb(255, 253, 249);
+          font-size: 1rem;
+          width: 240px;
+          height: 48px;
+          margin: 1.5rem auto 0px;
+        }
+      }
+    }
+  }
 }
 
 .offering-icon-token {
-    width: 20px;
-    margin: 0 5px 0;
-    border-radius: 100%;
+  width: 20px;
+  margin: 0 5px 0;
+  border-radius: 100%;
 }
 
 .clear-both {
-    clear: both;
+  clear: both;
 }
 
 @media (max-width: 767px) {
-    .page-sale .offering-footer .icons .icon {
-        width: 15vw;
+  .page-sale .offering-footer .icons .icon {
+    width: 15vw;
+  }
+  .page-sale
+    .offering-content
+    .offering-buy-token
+    .offering-box-buy-token
+    .offering-amount-to-phone
+    .offering-balance-token {
+    width: 100%;
+    span {
+      margin-left: 0.5rem;
     }
-    .page-sale .offering-content .offering-buy-token .offering-box-buy-token .offering-amount-to-phone .offering-balance-token {
-        width: 100% ;
-        span {
-            margin-left: 0.5rem;
-        }
-    }
-    
+  }
 }
 
-
-.ant-btn[disabled], .ant-btn[disabled]:active, .ant-btn[disabled]:focus, .ant-btn[disabled]:hover {
-    background-color: #acd2f1 !important;
-    background-image: linear-gradient(160deg, #b2e0fb 0%, #4eecdb 100%) !important;
-    border-color: #ace3ff !important;
-    color: rgba(0, 0, 0, 0.4) !important;
-    text-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
+.ant-btn[disabled],
+.ant-btn[disabled]:active,
+.ant-btn[disabled]:focus,
+.ant-btn[disabled]:hover {
+  background-color: #acd2f1 !important;
+  background-image: linear-gradient(160deg, #b2e0fb 0%, #4eecdb 100%) !important;
+  border-color: #ace3ff !important;
+  color: rgba(0, 0, 0, 0.4) !important;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
