--- a/src/pages/Stake/style.scss
+++ b/src/pages/Stake/style.scss
@@ -5,7 +5,7 @@ $base: 0.6rem;
   height: 90% !important;
   display: flex;
   .boxStake {
-    min-height: 400px;
+    min-height: 30vh;
   }
 }
 
@@ -23,6 +23,7 @@ $base: 0.6rem;
   background: #f0f2f5;
   .boxStake {
     padding: 4vh 2vh;
+    min-height: 30vh;
     width: 100%;
     margin: 0 auto;
     position: relative;
@@ -69,13 +70,17 @@ $base: 0.6rem;
   background: linear-gradient(90deg, #0d78f8 0%, #5361ca 100%);
 }
 
+.flex {
+  display: flex;
+}
+
 .flex_between {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.stake_header {
+.phone_header {
   position: absolute;
   width: 100%;
   height: 6vh;
@@ -86,7 +91,7 @@ $base: 0.6rem;
   }
 }
 
-.phone_info {
+.phone_body {
   margin-top: 6vh;
   width: 100%;
 }
