--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f0f2f5 !important;
-  /* background: none !important; */
+  background: none !important;
 }
 
 code {
