--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -13,11 +13,12 @@ $phone-height: 99vh;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
     &:hover {
       box-shadow: 0px 15px 20px rgba(51, 137, 197, 0.4);
-      color: #fff;
+      background: linear-gradient(90deg, #2d7bfa 0%, #6064cf 100%);
       transform: translateY(-5px);
     }
     img {
-      width: 100%;
+      width: 12vw;
+      height: 12vw;
     }
   }
 }
@@ -25,7 +26,20 @@ $phone-height: 99vh;
 .default_layout {
   width: ($phone-height/19.5) * 8.9;
   height: $phone-height * 0.927;
-  background-color: #f0f2f5;
+  border-radius: $phone-height/30;
+}
+
+.bg_liner {
+  background: linear-gradient(90deg, #2d7bfa 0%, #6064cf 100%) !important;
+}
+
+.bg_liner_buyIphone {
+  height: 17vh;
+  border-radius: 2vh 2vh 0vh 0vh;
+}
+
+.bg_w {
+  background-color: white;
 }
 
 .open_a {
