--- a/src/pages/Stake/style.scss
+++ b/src/pages/Stake/style.scss
@@ -20,7 +20,7 @@ $base: 0.6rem;
   position: relative;
   padding: 0vh 0em 1em 0em;
   height: 100vh;
-  background: #f0f2f5;
+  background-color: transparent;
   .boxStake {
     padding: 4vh 2vh;
     min-height: 30vh;
@@ -58,16 +58,19 @@ $base: 0.6rem;
   text-align: center !important;
 }
 
-.bt-width {
+.bt-liner {
   background: linear-gradient(90deg, #0d78f8 0%, #5361ca 100%);
-  width: 85% !important;
+  width: 37vw !important;
   height: 6vh !important;
   font-size: 4vw !important;
   border-radius: 20px !important;
+  color: white;
+  font-weight: 800;
 }
 
-.bt-width:hover {
+.bt-liner:hover {
   background: linear-gradient(90deg, #0d78f8 0%, #5361ca 100%);
+  color: white;
 }
 
 .flex {
@@ -88,6 +91,12 @@ $base: 0.6rem;
   img {
     height: 3.7vh;
     opacity: 0.6;
+  }
+  p {
+    font-size: 5vw;
+    font-weight: 800;
+    color: white;
+    margin-bottom: 0;
   }
 }
 
