--- a/src/components/OwnedDevice/style.scss
+++ b/src/components/OwnedDevice/style.scss
@@ -1,6 +1,8 @@
 $height: 30vh;
-.mgb_15 {
-  margin-bottom: 5vh !important;
+.own_device {
+  margin-top: 7vh !important;
+  margin-bottom: 1vh !important;
+  width: 90% !important;
 }
 
 .my_ip {
