--- a/src/pages/BuyPhone/style.scss
+++ b/src/pages/BuyPhone/style.scss
@@ -1,6 +1,5 @@
 .page-sale {
   height: auto;
-  background-color: #f0f2f5;
   margin-top: 10vh;
   .offering-header {
     background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 30%, #2cacd1 65%, #35eb93 100%);
@@ -252,15 +251,6 @@
   }
 }
 
-.ant-btn[disabled],
-.ant-btn[disabled]:active,
-.ant-btn[disabled]:focus,
-.ant-btn[disabled]:hover {
-  background-color: #acd2f1 !important;
-  background-image: linear-gradient(160deg, #b2e0fb 0%, #4eecdb 100%) !important;
-  border-color: #ace3ff !important;
-  color: rgba(0, 0, 0, 0.4) !important;
-  text-shadow: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+.bt_buyPhone {
+  margin-top: 3vh;
 }
