style : update style for iphone4 iphone7 iphone8

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,9 @@
 .scroll_able::-webkit-scrollbar {
   display: none; /* Chrome, Safari and Opera */
 }
+
+.ant-message-custom-content {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
