--- a/src/pages/BuyIphone/style.scss
+++ b/src/pages/BuyIphone/style.scss
@@ -6,20 +6,21 @@
 .buy_iphone_body {
   margin-top: 10vh;
   width: 90%;
-  height: 52vh;
-  padding: 2.5vh;
-  background-color: white;
-  border-radius: 2vh;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   .ant-select-selector {
     border: 2px solid #2e5cc0 !important;
     border-radius: 2vh !important;
     cursor: pointer !important;
   }
+  .product_info {
+    padding: 2.5vh 2.5vh 2vh 2.5vh;
+    background-color: white;
+    border-radius: 2vh;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
 }
 
 .ship_image {
-  margin-top: 6vh;
-  height: 15vh;
-  width: 15vh;
+  margin-top: 2vh;
+  height: 14vh;
+  width: 14vh;
 }
