--- a/src/pages/BuyPhone/style.scss
+++ b/src/pages/BuyPhone/style.scss
@@ -107,7 +107,7 @@
             border-radius: 20px;
             color: rgb(189, 189, 189);
             padding: 8px 8px;
-            height: 50px;
+            height: 9vh;
             .ant-input-number:focus,
             .ant-input-number-focused {
               outline-offset: 0px;
@@ -122,7 +122,7 @@
               border: none;
               flex: 1 1 auto;
               background: none;
-              font-size: 22px;
+              font-size: 3.5vh;
               font-weight: 700;
               white-space: nowrap;
               overflow: hidden;
@@ -164,7 +164,7 @@
           }
           .offering-icon-arrow-down {
             margin: 0 0 1rem 0;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             font-weight: bold;
           }
           .offering-balance-token {
@@ -186,7 +186,7 @@
             border-radius: 20px;
             color: rgb(189, 189, 189);
             padding: 12px 16px;
-            height: 50px;
+            height: 9vh;
             .offering-phone {
               text-align: start;
               box-sizing: border-box;
@@ -194,7 +194,7 @@
               min-width: 0px;
               flex: 1 1 0%;
               color: rgb(79, 79, 79);
-              font-size: 22px;
+              font-size: 3.5vh;
               font-weight: 600;
               margin-right: 5px;
             }
