add fetch iphone

--- a/src/pages/Stake/style.scss
+++ b/src/pages/Stake/style.scss
@@ -57,6 +57,10 @@ $base: 0.6rem;
   text-align: center !important;
 }
 
+.bt-collect {
+  background: linear-gradient(90deg, #0d78f8 0%, #5361ca 100%);
+}
+
 .bt-liner {
   background: linear-gradient(90deg, #0d78f8 0%, #5361ca 100%);
   width: 42vw !important;
